Fix style problems